# qjrad

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  dbusdict.cpp  dbusdict.h  dbustrandlg.ui  global.cpp  global.h  goldendictmgr.cpp  goldendictmgr.h  kanjimodel.cpp  kanjimodel.h  kdictionary.cpp  kdictionary.h  loadingdlg.h  loadingdlg.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  miscutils.cpp  miscutils.h  qjrad.pro  qjrad.qrc  qsl.h  regiongrabber.cpp  regiongrabber.h  settingsdlg.cpp  settingsdlg.h  settingsdlg.ui  xcbtools.cpp  xcbtools.h
converter/: convertdicts  main.cpp
data/: kradfilex  kradfilex.utf8  radkfilex  radkfilex.utf8
goldendict/: dictzip.c
kanjiconv/: kanjiconv.pro  main.cpp
trunk/: dbusdict.cpp  dbusdict.h  dbustrandlg.cpp  dbustrandlg.h  global.cpp  global.h  goldendictmgr.cpp  kanjimodel.cpp  kanjimodel.h  kdictionary.cpp  kdictionary.h  loadingdlg.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  miscutils.cpp  miscutils.h  org.qjrad.dictionary.xml  qjrad.pro  qjrad.qrc  settingsdlg.cpp  settingsdlg.h  settingsdlg.ui
trunk/goldendict/: btreeidx.cc  dictionary.cc  dsl.cc  stardict.cc
trunk/kanjiconv/: convertdicts  kanjiconv.qrc  main.cpp
